Revision history for Perl distribution Test-Class-Moose

{{$NEXT}}

0.94     2018-08-18

  [BUG FIXES]

  * Replace all cases of "use 5.10.0" with "use 5.010000". The former was
    causing some versions of Perl to emit warnings that cause tests to fail.


0.93     2018-08-14

  [ENHANCEMENTS]

  * The CLI class (and role) now allow you to pass a directory for the
  --classes option. This directory is searched recursively for classes to be
  loaded. Based on a feature request from jrubinator. GH #91.

  [BUG FIXES]

  * Extending a TCM class with a non-existing or non-TCM class now delivers a
    fatal error instead of silently ignoring the test class. Implemented by
    Harald Jörg. PR #93, fixes GH #70.

0.92     2017-12-23

  [ENHANCEMENTS]

  * Added a new "executor_roles" parameter to the Test::Class::Moose::Runner
    constructor. This allows you to apply roles to the executor (the object
    which executes test classes) as a way to extend the default TCM
    behavior. See the documentation for Test::Class::Moose::Role::Executor for
    methods which you can wrap.

  [BACKWARDS INCOMPATIBILITIES]

  * Removed the never-documented Test::Class::Moose::Report's is_parallel
    attribute. This was present because in older versions of TCM, reporting
    was broken when tests were run in parallel.

0.91     2017-12-07

  [BUG FIXES]

  * Use sum0 instead of sum in the num_test_instances() method for the report
    object. Fixed by Larry Leszczynski. GH #87.

0.90     2017-11-28

  [BUG FIXES]

  * Require Test2 1.1302118 per Chad Granum's recommendation. This version
    includes some fixes for bugs that could cause tests to hang.

0.89     2017-11-19

  [ENHANCEMENTS]

  * Moved the check for bad class names in Test::Class::Moose::Role::Executor
    to its own method to facilitate overriding just that portion of the
    role. Based on PR #85 from Chuck Adams, and addresses #84.

0.88     2017-11-04

  [BUG FIXES]
