@@ -16,6 +16,7 @@ stopwords = AnnoCPAN
 stopwords = CPAN
 stopwords = Copypasta
 stopwords = DEPRECATIONS
+stopwords = dirs
 stopwords = Extensibility
 stopwords = MetaCPAN
 stopwords = OO
